--- a/Ecommerce/Views/Categoria/Index.cshtml
+++ b/Ecommerce/Views/Categoria/Index.cshtml
@@ -5,11 +5,25 @@
     Layout = "~/Views/Shared/_Maintenance.cshtml";
 }
 
-<h1>Index</h1>
+<div class="cabecera">
+    <label>Categorias</label>
+</div>
+<br />
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+
+<div>
+    <a asp-action="Create" class="btn btn-success">Nueva Categoria</a>
+    <div style="float:right">
+        @using (Html.BeginForm("Index", "Categoria"))
+        {
+            <em> Categoria: </em>
+            @Html.TextBox("descripcion")
+            <button>Buscar</button>
+
+        }
+    </div>
+</div>
+<br />
 <table class="table">
     <thead>
         <tr>
@@ -23,20 +37,21 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.IdCategoria)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.descripcion)
-            </td>
-            <td>
-                @Html.ActionLink("Editar", "Edit", new { id=item.IdCategoria }, new { @class = "btn btn-outline-primary" }) |
-                @Html.ActionLink("Detalles", "Details", new { id = item.IdCategoria }, new { @class = "btn btn-outline-info" }) |
-                @Html.ActionLink("Eliminar", "Delete", new { id = item.IdCategoria }, new { @class = "btn btn-outline-danger" })
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.IdCategoria)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.descripcion)
+                </td>
+                <td>
+                    @Html.ActionLink("Editar", "Edit", new { id = item.IdCategoria }, new { @class = "btn btn-outline-primary" }) |
+                    @Html.ActionLink("Detalles", "Details", new { id = item.IdCategoria }, new { @class = "btn btn-outline-info" }) |
+                    @Html.ActionLink("Eliminar", "Delete", new { id = item.IdCategoria }, new { @class = "btn btn-outline-danger" })
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
