--- a/Ecommerce/Views/Login/Index.cshtml
+++ b/Ecommerce/Views/Login/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Ecommerce.Models.Usuario
 @{
     ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Master.cshtml";
 }
 <link rel="stylesheet" href="~/css/loginstyle.css" />
 
