--- a/Ecommerce/Views/Categoria/Details.cshtml
+++ b/Ecommerce/Views/Categoria/Details.cshtml
@@ -5,27 +5,29 @@
     Layout = "~/Views/Shared/_Maintenance.cshtml";
 }
 
-<h1>Details</h1>
+<div class="cabecera">
+    <label>Detalle de Categoría</label>
+</div>
+<br />
 
 <div>
-    <h4>Categoria</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.IdCategoria)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.IdCategoria)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.descripcion)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.descripcion)
         </dd>
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "Edit", new {  id = Model.IdCategoria  }, new { @class = "btn btn-warning" }) |
+    @Html.ActionLink("Editar", "Edit", new { id = Model.IdCategoria }, new { @class = "btn btn-warning" }) |
     <a asp-action="Index" class="btn btn-primary">Regresar</a>
 </div>
