--- a/Ecommerce/Views/Categoria/Edit.cshtml
+++ b/Ecommerce/Views/Categoria/Edit.cshtml
@@ -5,9 +5,10 @@
     Layout = "~/Views/Shared/_Maintenance.cshtml";
 }
 
-<h1>Edit</h1>
-
-<h4>Categoria</h4>
+<div class="cabecera">
+    <label>Editar Categoria</label>
+</div>
+<br />
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -15,7 +16,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="IdCategoria" class="control-label"></label>
-                <input asp-for="IdCategoria" class="form-control" />
+                <input asp-for="IdCategoria" class="form-control" readonly/>
                 <span asp-validation-for="IdCategoria" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -35,7 +36,7 @@
 </div>
 
 <div>
-    
+
 </div>
 
 @section Scripts {
