--- a/Ecommerce/Views/Ecommerce/Carrito.cshtml
+++ b/Ecommerce/Views/Ecommerce/Carrito.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<Ecommerce.Models.Item>
+﻿@using Microsoft.AspNetCore.Http
+@model IEnumerable<Ecommerce.Models.Item>
 @{
     ViewData["Title"] = "Carrito";
     Layout = "~/Views/Shared/_Master.cshtml";
@@ -16,7 +17,6 @@
                 <!-- Billing Details -->
                 <!-- /Billing Details -->
                 <!-- Shiping Details -->
-           
                 <!-- /Shiping Details -->
                 <!-- Order notes -->
                 <!-- /Order notes -->
@@ -93,7 +93,18 @@
                         He leído y acepto los <a href="#">términos y condiciones</a>
                     </label>
                 </div>
-                <a href="#" class="primary-btn order-submit">Ordenar ahora</a>
+                @{
+                    if ((Context.Session.GetString("_UserNormal") == null) || (Context.Session.GetString("_UserNormal") == ""))
+                    {
+                                <a asp-action="Index" asp-controller="Login" class="primary-btn order-submit">Ordenar ahora</a>
+                    }
+                    else
+                    {
+            <a href="#" class="primary-btn order-submit">Ordenar ahora</a>
+                    }
+                }
+                
+                
             </div>
             <!-- /Order Details -->
         </div>
