--- a/Ecommerce/Views/Producto/Create.cshtml
+++ b/Ecommerce/Views/Producto/Create.cshtml
@@ -5,17 +5,20 @@
     Layout = "~/Views/Shared/_Maintenance.cshtml";
 }
 
-<h1>Create</h1>
-
-<h4>Producto</h4>
+<div class="cabecera">
+    <label>Crear Producto</label>
+</div>
+<br />
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <!-- 
                 <label asp-for="IdProducto" class="control-label"></label>
-                <input asp-for="IdProducto" class="form-control" readonly/>
+                    -->
+                <input type="hidden" asp-for="IdProducto" class="form-control" readonly />
                 <span asp-validation-for="IdProducto" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -65,7 +68,7 @@
 </div>
 
 <div>
-    
+
 </div>
 
 @section Scripts {
