--- a/Ecommerce/Views/Producto/Edit.cshtml
+++ b/Ecommerce/Views/Producto/Edit.cshtml
@@ -5,9 +5,10 @@
     Layout = "~/Views/Shared/_Maintenance.cshtml";
 }
 
-<h1>Edit</h1>
-
-<h4>Producto</h4>
+<div class="cabecera">
+    <label>Editar Producto</label>
+</div>
+<br />
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -15,7 +16,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="IdProducto" class="control-label"></label>
-                <input asp-for="IdProducto" class="form-control" readonly/>
+                <input asp-for="IdProducto" class="form-control" readonly />
                 <span asp-validation-for="IdProducto" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -50,7 +51,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="IdCategoria" class="control-label"></label>
-                <input asp-for="IdCategoria" class="form-control" />
+                <select asp-for="IdCategoria" asp-items="@ViewBag.category" class="form-control"> </select>
                 <span asp-validation-for="IdCategoria" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -65,7 +66,7 @@
 </div>
 
 <div>
-    
+
 </div>
 
 @section Scripts {
