--- a/Ecommerce/Views/Shared/_Maintenance.cshtml
+++ b/Ecommerce/Views/Shared/_Maintenance.cshtml
@@ -1,6 +1,15 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Http
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
+    @{ 
+                    if ((Context.Session.GetString("_User") == null) || (Context.Session.GetString("_User") == ""))
+                    {
+                        <script> window.location.href='@Url.Action("Index", "Administrador")'; </script> 
+                    }
+        }
+
     @if (IsSectionDefined("scripts"))
     {
         RenderSection("scripts");
@@ -28,12 +37,15 @@
     <!-- summernote -->
     <link rel="stylesheet" href="~/css/Maintenance/summernote/summernote-bs4.min.css">
 
+    <link rel="stylesheet" href="~/css/Maintenance/style.css"/>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.0/jquery.validate.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"></script>
 
     <link rel="stylesheet" href="./css/style.css" type="text/css">
     <link rel="stylesheet" href="./libs/css/bootstrap-datepicker.standalone.css" type="text/css">
+
 
 </head>
 <body class="hold-transition sidebar-mini layout-fixed">
@@ -172,6 +184,9 @@
                         <i class="fas fa-expand-arrows-alt"></i>
                     </a>
                 </li>
+                <li class="nav-item d-none d-sm-inline-block">
+                    <a asp-action="CerrarSesion" asp-controller="Administrador" class="nav-link">Cerrar Sesion</a>
+                </li>
 
             </ul>
         </nav>
@@ -192,7 +207,7 @@
                         <img src="~/css/Maintenance/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
                     </div>
                     <div class="info">
-                        <a asp-action="Index" asp-controller="Home" class="d-block">Jesus Velasquez</a>
+                        <a asp-action="Index" asp-controller="Home" class="d-block">@Context.Session.GetString("_User")</a>
                     </div>
                 </div>
 
