--- a/Ecommerce/Views/Shared/_Master.cshtml
+++ b/Ecommerce/Views/Shared/_Master.cshtml
@@ -1,4 +1,9 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Http
+@using Newtonsoft.Json
+@{
+    List<Item> carrito = JsonConvert.DeserializeObject<List<Item>>(Context.Session.GetString("Carrito"));
+}
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -34,8 +39,28 @@
                     <li><a href="#"><i class="fa fa-map-marker"></i> Av. Bolivia N° 199 - CC. CENTRO LIMA</a></li>
                 </ul>
                 <ul class="header-links pull-right">
+
                     <li><a href="#"><i class="fa fa-dollar"></i> USD</a></li>
-                    <li><a href="#"><i class="fa fa-user-o"></i> Mi Cuenta</a></li>
+                    @{
+                        string texto = "Iniciar Sesión";
+                        if ((Context.Session.GetString("_UserNormal") == null) || (Context.Session.GetString("_UserNormal") == ""))
+                        {
+                            <li><a asp-action="Index" asp-controller="Login"><i class="fa fa-user-o"></i> @texto</a></li>
+                        }
+                        else
+                        {
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    @Context.Session.GetString("_UserNormal")
+                                </button>
+                                <div class="dropdown-menu" style="text-align:center;">
+                                    <div class="dropdown-divider"></div>
+                                    <a asp-action="CerrarSesion" asp-controller="Login" class="dropdown-item">Cerrar Sesion</a>
+                                </div>
+                            </div>
+                        }
+                    }
+
                 </ul>
             </div>
         </div>
@@ -64,8 +89,8 @@
                                     <option value="1">Category 01</option>
                                     <option value="1">Category 02</option>
                                 </select>
-                                <input class="input" placeholder="Search here">
-                                <button class="search-btn">Search</button>
+                                <input class="input" placeholder="Buscar Aqui">
+                                <button class="search-btn">Buscar</button>
                             </form>
                         </div>
                     </div>
@@ -74,20 +99,22 @@
                     <div class="col-md-3 clearfix">
                         <div class="header-ctn">
                             <!-- Wishlist -->
-                            <div>
-                                <a href="#">
-                                    <i class="fa fa-heart-o"></i>
-                                    <span>Your Wishlist</span>
-                                    <div class="qty">0</div>
-                                </a>
-                            </div>
+                            <!--
+    <div>
+        <a href="#">
+            <i class="fa fa-heart-o"></i>
+            <span>Your Wishlist</span>
+            <div class="qty">0</div>
+        </a>
+    </div>
+        -->
                             <!-- /Wishlist -->
                             <!-- Wishlist -->
                             <div>
                                 <a asp-action="Carrito" asp-controller="Ecommerce">
                                     <i class="fa fa-shopping-cart"></i>
                                     <span>Mi carrito</span>
-                                    <div class="qty">0</div>
+                                    <div class="qty">@carrito.Count()</div>
                                 </a>
                             </div>
                             <!-- /Wishlist -->
@@ -100,70 +127,134 @@
                             </div>
                             <!-- /Menu Toogle -->
                         </div>
-                    </div>
-                    <!-- /ACCOUNT -->
                 </div>
-                <!-- row -->
+                <!-- /ACCOUNT -->
             </div>
-            <!-- container -->
+            <!-- row -->
         </div>
-        <!-- /MAIN HEADER -->
-    </header>
-    <!-- /HEADER -->
-    <!-- NAVIGATION -->
-    <nav id="navigation">
         <!-- container -->
-        <div class="container">
-            <!-- responsive-nav -->
-            <div id="responsive-nav">
-                <!-- NAV -->
-                <ul class="main-nav nav navbar-nav">
-                    <li class="active"><a asp-action="Catalogo" asp-controller="Ecommerce">Inicio</a></li>
-                    <!--
-    <li><a href="#">Hot Deals</a></li>
-    <li><a href="#">Categories</a></li>
-    <li><a href="#">Laptops</a></li>
-    <li><a href="#">Smartphones</a></li>
-    <li><a href="#">Cameras</a></li>
-    <li><a href="#">Accessories</a></li>
-    -->
-                </ul>
-                <!-- /NAV -->
-            </div>
-            <!-- /responsive-nav -->
-        </div>
-        <!-- /container -->
-    </nav>
-    <!-- /NAVIGATION -->
-    <div>
-        @RenderBody()
     </div>
-    <!-- NEWSLETTER -->
-    <div id="newsletter" class="section">
+    <!-- /MAIN HEADER -->
+</header>
+<!-- /HEADER -->
+<!-- NAVIGATION -->
+<nav id="navigation">
+    <!-- container -->
+    <div class="container">
+        <!-- responsive-nav -->
+        <div id="responsive-nav">
+            <!-- NAV -->
+            <ul class="main-nav nav navbar-nav">
+                <li class="active"><a asp-action="Catalogo" asp-controller="Ecommerce">Inicio</a></li>
+                <!--
+                <li><a href="#">Hot Deals</a></li>
+                <li><a href="#">Categories</a></li>
+                <li><a href="#">Laptops</a></li>
+                <li><a href="#">Smartphones</a></li>
+                <li><a href="#">Cameras</a></li>
+                <li><a href="#">Accessories</a></li>
+                -->
+            </ul>
+            <!-- /NAV -->
+        </div>
+        <!-- /responsive-nav -->
+    </div>
+    <!-- /container -->
+</nav>
+<!-- /NAVIGATION -->
+<div>
+    @RenderBody()
+</div>
+<!-- NEWSLETTER -->
+<div id="newsletter" class="section">
+    <!-- container -->
+    <div class="container">
+        <!-- row -->
+        <div class="row">
+            <div class="col-md-12">
+                <div class="newsletter">
+                    <p>Si quieres recibir promociones especiales, suscribete a <strong>PCStore</strong></p>
+                    <form>
+                        <input class="input" type="email" placeholder="Ingrese su Correo">
+                        <button class="newsletter-btn"><i class="fa fa-envelope"></i> Subscribir</button>
+                    </form>
+                    <ul class="newsletter-follow">
+                        <li>
+                            <a href="#"><i class="fa fa-facebook"></i></a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-twitter"></i></a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-instagram"></i></a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-pinterest"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <!-- /row -->
+    </div>
+    <!-- /container -->
+</div>
+<!-- /NEWSLETTER -->
+<!-- FOOTER -->
+<footer id="footer">
+    <!-- top footer -->
+    <div class="section">
         <!-- container -->
         <div class="container">
             <!-- row -->
             <div class="row">
-                <div class="col-md-12">
-                    <div class="newsletter">
-                        <p>Si quieres recibir promociones especiales, suscribete a <strong>PCStore</strong></p>
-                        <form>
-                            <input class="input" type="email" placeholder="Ingrese su Correo">
-                            <button class="newsletter-btn"><i class="fa fa-envelope"></i> Subscribir</button>
-                        </form>
-                        <ul class="newsletter-follow">
-                            <li>
-                                <a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fa fa-instagram"></i></a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fa fa-pinterest"></i></a>
-                            </li>
+                <div class="col-md-3 col-xs-6">
+                    <div class="footer">
+                        <h3 class="footer-title">Contáctanos</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.</p>
+                        <ul class="footer-links">
+                            <li><a href="#"><i class="fa fa-map-marker"></i>Av. Bolivia N° 199 - CC. CENTRO LIMA </a></li>
+                            <li><a href="#"><i class="fa fa-phone"></i>+51-954124015</a></li>
+                            <li><a href="#"><i class="fa fa-envelope-o"></i>ventas@pcstore.com</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="col-md-3 col-xs-6">
+                    <div class="footer">
+                        <h3 class="footer-title">Categorias</h3>
+                        <ul class="footer-links">
+                            <li><a href="#">Ofertas especiales</a></li>
+                            <li><a href="#">Laptops</a></li>
+                            <li><a href="#">Periféricos</a></li>
+                            <li><a href="#">Camaras</a></li>
+                            <li><a href="#">Accesorios</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="clearfix visible-xs"></div>
+
+                <div class="col-md-3 col-xs-6">
+                    <div class="footer">
+                        <h3 class="footer-title">Informacion</h3>
+                        <ul class="footer-links">
+                            <li><a href="#">Sobre nosotros</a></li>
+                            <li><a href="#">Contáctenos</a></li>
+                            <li><a href="#">Política de Privacidad</a></li>
+                            <li><a href="#">Pedidos y Devoluciones</a></li>
+                            <li><a href="#">Términos y Condiciones</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="col-md-3 col-xs-6">
+                    <div class="footer">
+                        <h3 class="footer-title">Servicios</h3>
+                        <ul class="footer-links">
+                            <li><a href="#">Mi cuenta</a></li>
+                            <li><a href="#">Ver Carrito</a></li>
+                            <li><a href="#">Ayuda</a></li>
                         </ul>
                     </div>
                 </div>
@@ -172,107 +263,43 @@
         </div>
         <!-- /container -->
     </div>
-    <!-- /NEWSLETTER -->
-    <!-- FOOTER -->
-    <footer id="footer">
-        <!-- top footer -->
-        <div class="section">
-            <!-- container -->
-            <div class="container">
-                <!-- row -->
-                <div class="row">
-                    <div class="col-md-3 col-xs-6">
-                        <div class="footer">
-                            <h3 class="footer-title">Contáctanos</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.</p>
-                            <ul class="footer-links">
-                                <li><a href="#"><i class="fa fa-map-marker"></i>Av. Bolivia N° 199 - CC. CENTRO LIMA </a></li>
-                                <li><a href="#"><i class="fa fa-phone"></i>+51-954124015</a></li>
-                                <li><a href="#"><i class="fa fa-envelope-o"></i>ventas@pcstore.com</a></li>
-                            </ul>
-                        </div>
-                    </div>
-
-                    <div class="col-md-3 col-xs-6">
-                        <div class="footer">
-                            <h3 class="footer-title">Categorias</h3>
-                            <ul class="footer-links">
-                                <li><a href="#">Ofertas especiales</a></li>
-                                <li><a href="#">Laptops</a></li>
-                                <li><a href="#">Periféricos</a></li>
-                                <li><a href="#">Camaras</a></li>
-                                <li><a href="#">Accesorios</a></li>
-                            </ul>
-                        </div>
-                    </div>
-
-                    <div class="clearfix visible-xs"></div>
-
-                    <div class="col-md-3 col-xs-6">
-                        <div class="footer">
-                            <h3 class="footer-title">Informacion</h3>
-                            <ul class="footer-links">
-                                <li><a href="#">Sobre nosotros</a></li>
-                                <li><a href="#">Contáctenos</a></li>
-                                <li><a href="#">Política de Privacidad</a></li>
-                                <li><a href="#">Pedidos y Devoluciones</a></li>
-                                <li><a href="#">Términos y Condiciones</a></li>
-                            </ul>
-                        </div>
-                    </div>
-
-                    <div class="col-md-3 col-xs-6">
-                        <div class="footer">
-                            <h3 class="footer-title">Servicios</h3>
-                            <ul class="footer-links">
-                                <li><a href="#">Mi cuenta</a></li>
-                                <li><a href="#">Ver Carrito</a></li>
-                                <li><a href="#">Ayuda</a></li>
-                            </ul>
-                        </div>
-                    </div>
+    <!-- /top footer -->
+    <!-- bottom footer -->
+    <div id="bottom-footer" class="section">
+        <div class="container">
+            <!-- row -->
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <ul class="footer-payments">
+                        <li><a href="#"><i class="fa fa-cc-visa"></i></a></li>
+                        <li><a href="#"><i class="fa fa-credit-card"></i></a></li>
+                        <li><a href="#"><i class="fa fa-cc-paypal"></i></a></li>
+                        <li><a href="#"><i class="fa fa-cc-mastercard"></i></a></li>
+                        <li><a href="#"><i class="fa fa-cc-discover"></i></a></li>
+                        <li><a href="#"><i class="fa fa-cc-amex"></i></a></li>
+                    </ul>
+                    <span class="copyright">
+                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                        Copyright &copy;
+                        <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                    </span>
                 </div>
-                <!-- /row -->
             </div>
-            <!-- /container -->
+            <!-- /row -->
         </div>
-        <!-- /top footer -->
-        <!-- bottom footer -->
-        <div id="bottom-footer" class="section">
-            <div class="container">
-                <!-- row -->
-                <div class="row">
-                    <div class="col-md-12 text-center">
-                        <ul class="footer-payments">
-                            <li><a href="#"><i class="fa fa-cc-visa"></i></a></li>
-                            <li><a href="#"><i class="fa fa-credit-card"></i></a></li>
-                            <li><a href="#"><i class="fa fa-cc-paypal"></i></a></li>
-                            <li><a href="#"><i class="fa fa-cc-mastercard"></i></a></li>
-                            <li><a href="#"><i class="fa fa-cc-discover"></i></a></li>
-                            <li><a href="#"><i class="fa fa-cc-amex"></i></a></li>
-                        </ul>
-                        <span class="copyright">
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                            Copyright &copy;
-                            <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                        </span>
-                    </div>
-                </div>
-                <!-- /row -->
-            </div>
-            <!-- /container -->
-        </div>
-        <!-- /bottom footer -->
-    </footer>
-    <!-- /FOOTER -->
-    <script src="~/js/Layout/js/bootstrap.min.js"></script>
-    <script src="~/js/Layout/js/jquery.min.js"></script>
-    <script src="~/js/Layout/js/jquery.zoom.min.js"></script>
-    <script src="~/js/Layout/js/main.js"></script>
-    <script src="~/js/Layout/js/nouislider.min.js"></script>
-    <script src="~/js/Layout/js/bootstrap.min.js"></script>
-    <script src="~/js/Layout/js/slick.min.js"></script>
+        <!-- /container -->
+    </div>
+    <!-- /bottom footer -->
+</footer>
+<!-- /FOOTER -->
+<script src="~/js/Layout/js/bootstrap.min.js"></script>
+<script src="~/js/Layout/js/jquery.min.js"></script>
+<script src="~/js/Layout/js/jquery.zoom.min.js"></script>
+<script src="~/js/Layout/js/main.js"></script>
+<script src="~/js/Layout/js/nouislider.min.js"></script>
+<script src="~/js/Layout/js/bootstrap.min.js"></script>
+<script src="~/js/Layout/js/slick.min.js"></script>
 </body>
 
 </html>
