--- a/Ecommerce/Views/Usuario/Create.cshtml
+++ b/Ecommerce/Views/Usuario/Create.cshtml
@@ -5,17 +5,20 @@
     Layout = "~/Views/Shared/_Maintenance.cshtml";
 }
 
-<h1>Create</h1>
-
-<h4>Usuario</h4>
+<div class="cabecera">
+    <label>Crear Usuario</label>
+</div>
+<br />
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <!-- 
                 <label asp-for="IdUsuario" class="control-label"></label>
-                <input asp-for="IdUsuario" class="form-control" />
+                    -->
+                <input type="hidden" asp-for="IdUsuario" class="form-control" />
                 <span asp-validation-for="IdUsuario" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -45,7 +48,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Contraseña" class="control-label"></label>
-                <input asp-for="Contraseña" class="form-control" />
+                <input type="password" asp-for="Contraseña" class="form-control" />
                 <span asp-validation-for="Contraseña" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -67,10 +70,6 @@
 </div>
 <div>
     @ViewBag.mensaje
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
