--- a/Ecommerce/Views/Usuario/Edit.cshtml
+++ b/Ecommerce/Views/Usuario/Edit.cshtml
@@ -7,9 +7,10 @@
 
 
 
-<h1>Edit</h1>
-
-<h4>Usuario</h4>
+<div class="cabecera">
+    <label>Editar Usuario</label>
+</div>
+<br />
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -17,7 +18,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="IdUsuario" class="control-label"></label>
-                <input asp-for="IdUsuario" class="form-control" />
+                <input asp-for="IdUsuario" class="form-control" readonly />
                 <span asp-validation-for="IdUsuario" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -47,7 +48,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Contraseña" class="control-label"></label>
-                <input asp-for="Contraseña" class="form-control" />
+                <input type="password" asp-for="Contraseña" class="form-control" />
                 <span asp-validation-for="Contraseña" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -60,8 +61,8 @@
                 <input asp-for="Direccion" class="form-control" />
                 <span asp-validation-for="Direccion" class="text-danger"></span>
             </div>
-            <br/>
-            <br/>
+            <br />
+            <br />
             <div class="form-group">
                 <input type="submit" value="Guardar" class="btn btn-success" />
                 <a asp-action="Index" class="btn btn-primary">Regresar</a>
@@ -74,7 +75,7 @@
 </div>
 
 <div>
-    
+
 </div>
 
 @section Scripts {
