--- a/Ecommerce/wwwroot/css/loginstyle.css
+++ b/Ecommerce/wwwroot/css/loginstyle.css
@@ -14,7 +14,7 @@
     border-radius: 10px;
     border-top-left-radius: 50px;
     border-bottom-right-radius: 50px;
-    border: solid 1px #2980b9;
+    border: solid 1px #D10024;
     margin: 10px;
     padding: 15px;
 }
@@ -37,7 +37,7 @@
     height: 40px;
     width: 75%;
     padding-left: 10px;
-    color: #2498db;
+    color: #D10024;
     border: 1px solid;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color: transparent;
@@ -69,17 +69,17 @@
     margin-bottom: 30px;
     height: 40px;
     width: 78%;
-    background: #2498db;
+    background: #D10024;
     color: white;
     border-radius: 2px;
     cursor: pointer;
     outline: none;
-    border: 2px solid #2980b9;
+    border: 2px solid #850017;
     transition: all .5s ease;
 }
 
     .cuerpo_formulario button:hover {
         color: #d5dbdd;
-        border: 2px solid #2b7eaf;
-        background: linear-gradient(#2498db,#2b7eaf);
+        border: 2px solid #ad2b54;
+        background: linear-gradient(#D10024,#c30122);
     }
